feat: AuthController 추가, /login 기능 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,19 @@
 spring.application.name=MOUP_Server
 
-# .env ?? ???
+# .env file imports
 spring.config.import=optional:file:.env[.properties]
 
-# Database ??
+# Database Settings
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
-# Log ??
+# Log Settings
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.web=DEBUG
+
+# JWT Settings
+jwt.secret.key=${JWT_SECRET_KEY}
+# 20?
+jwt.access.token.expiration=1200000
