--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install sshpass
-      run: sudo apt-get update && sudo apt-get install -y sshpass
-
     - name: Deploy Spring Boot on Raspberry Pi using screen
       run: |
         sshpass -p "${{ secrets.RPI_PASSWORD }}" ssh -o StrictHostKeyChecking=no -p ${{ secrets.RPI_PORT }} ${{ secrets.RPI_USER }}@${{ secrets.RPI_HOST }} << 'EOF'
@@ -29,5 +26,5 @@ jobs:
           screen -S spring-server -X quit || true
 
           # 5. 새 screen 세션 생성 및 jar 실행
-          screen -dmS spring-server java -jar build/libs/*.jar
+          screen -dmS spring-server java -jar build/libs/MOUP_Server-0.0.1-SNAPSHOT.jar
         EOF
