feat: JWT 필터 추가, 프로필 조회 API 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,14 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
+#Mybatis Settings
+mybatis.configuration.map-underscore-to-camel-case=true
+
 # Log Settings
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.web=DEBUG
 
 # JWT Settings
 jwt.secret.key=${JWT_SECRET_KEY}
-# 20?
+# Access Token Expiration = 20 minutes
 jwt.access.token.expiration=1200000
