--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,5 @@ jobs:
           git pull origin main
           ./gradlew build -x test
           screen -S spring-server -X quit || true
-          cd build/libs
-          screen -dmS spring-server java -jar MOUP_Server-0.0.1-SNAPSHOT.jar
+          screen -dmS spring-server bash -c 'set -a && source .env && java -jar build/libs/*.jar > app.log 2>&1'
         EOF
