fix: application.properties 프로필 개발, 서버 분리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 spring.application.name=MOUP_Server
 
+# Spring profile Settings
+spring.profiles.active=dev
+
 # .env file imports
 spring.config.import=optional:file:.env[.properties]
+
+# Log Settings
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.web=DEBUG
+
+# Mybatis Settings
+mybatis.configuration.map-underscore-to-camel-case=true
 
 # Database Settings
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,14 +19,6 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
-#Mybatis Settings
-mybatis.configuration.map-underscore-to-camel-case=true
-
-# Log Settings
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.springframework.web=DEBUG
-
 # JWT Settings
 jwt.secret.key=${JWT_SECRET_KEY}
-# Access Token Expiration = 20 minutes
 jwt.access.token.expiration=1200000
