--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,14 @@ spring.datasource.password=${DATABASE_PASSWORD}
 # JWT Settings
 jwt.secret.key=${JWT_SECRET_KEY}
 jwt.access.token.expiration=1200000
+
+# AWS S3 Settings
+cloud.aws.s3.bucket=${S3_BUCKET_NAME}
+cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
+cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.stack.auto=false
+
+# File Settings
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
