--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     implementation 'io.swagger.core.v3:swagger-annotations:2.2.32'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
+    implementation 'com.google.api-client:google-api-client:2.7.2'
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
 
     compileOnly 'org.projectlombok:lombok'
