--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,6 @@ cloud.aws.stack.auto=false
 # File Settings
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+# Client Id Settings
+google.client.id=${GOOGLE_CLIENT_ID}
