--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,8 @@ jobs:
           echo "S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }}" >> .env
           echo "AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }}" >> .env
           echo "AWS_SECRET_KEY=${{ secrets.AWS_SECRET_KEY }}" >> .env
-
+          echo "GOOGLE_CLIENT_ID"=${{ secrets.GOOGLE_CLIENT_ID }}" >> .env
+  
           # .env 파일의 환경 변수 로드
           set -a && source .env
           
