--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
     implementation 'com.google.api-client:google-api-client:2.7.2'
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+    implementation 'com.nimbusds:nimbus-jose-jwt:10.0.2'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
