--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,4 @@ spring.servlet.multipart.max-request-size=5MB
 
 # Client Id Settings
 google.client.id=${GOOGLE_CLIENT_ID}
+apple.client.id=${APPLE_CLIENT_ID}
