--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,9 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
+# Swagger Settings
+springdoc.swagger-ui.persist-authorization=true
+
 # JWT Settings
 jwt.secret.key=${JWT_SECRET_KEY}
 jwt.access.token.expiration=1200000
