--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,6 @@ spring.servlet.multipart.max-request-size=5MB
 # Client Id Settings
 google.client.id=${GOOGLE_CLIENT_ID}
 apple.client.id=${APPLE_CLIENT_ID}
+
+# User Settings
+user.delete.grace-period=3
