--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,8 +37,13 @@ cloud.aws.stack.auto=false
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
-# Client Id Settings
+# OAuth Settings
+## Google Settings
 google.client.id=${GOOGLE_CLIENT_ID}
+google.client.secret=${GOOGLE_CLIENT_SECRET}
+google.redirect.uri=${GOOGLE_REDIRECT_URI}
+
+## Apple Settings
 apple.client.id=${APPLE_CLIENT_ID}
 
 # User Settings
