feat: Auth Code Flow 세부 로직 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,10 @@ springdoc.swagger-ui.persist-authorization=true
 
 # JWT Settings
 jwt.secret.key=${JWT_SECRET_KEY}
+## 20 minutes
 jwt.access.token.expiration=1200000
+## 1 week
+jwt.refresh.token.expiration=604800000
 
 # AWS S3 Settings
 cloud.aws.s3.bucket=${S3_BUCKET_NAME}
