--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,6 +48,11 @@ google.redirect.uri=${GOOGLE_REDIRECT_URI}
 
 ## Apple Settings
 apple.client.id=${APPLE_CLIENT_ID}
+apple.team.id=${APPLE_TEAM_ID}
+apple.key.id=${APPLE_KEY_ID}
+apple.private.key=${APPLE_PRIVATE_KEY}
+apple.redirect.uri=${APPLE_REDIRECT_URI}
 
 # User Settings
+## 3 days
 user.delete.grace-period=3
