--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,8 @@ jobs:
           echo "APPLE_KEY_ID=${{ secrets.APPLE_KEY_ID }}" >> .env
           echo "APPLE_PRIVATE_KEY=${{ secrets.APPLE_PRIVATE_KEY }}" >> .env
           echo "APPLE_REDIRECT_URI=${{ secrets.APPLE_REDIRECT_URI }}" >> .env
-  
+          echo "ADMIN_AUTH_TOKEN=${{ secrets.ADMIN_AUTH_TOKEN }}" >> .env
+          
           # .env 파일의 환경 변수 로드
           set -a && source .env
           
@@ -52,4 +53,15 @@ jobs:
           
           # Run the Spring Boot application in the background, redirecting output to app.log
           nohup java -jar build/libs/MOUP_Server-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod > app.log 2>&1 &
+
+          # ----- 여기에 crontab 설정 명령어 추가 -----
+          # 하드 삭제 스크립트 파일명
+          DELETE_SCRIPT="/home/${{ secrets.RPI_USER }}/MOUP-Server/src/main/resources/delete_old_users.sh"
+          
+          # 스크립트 실행 권한 부여
+          chmod +x "$DELETE_SCRIPT"
+          
+          # 기존 crontab 설정 가져오기 (파일이 없으면 새로 생성)
+          (crontab -l 2>/dev/null; echo "0 0 * * * /bin/bash $DELETE_SCRIPT >> /home/${{ secrets.RPI_USER }}/MOUP-Server/hard_delete.log 2>&1") | crontab -
+          echo "Crontab 설정 완료: 매일 0시 0분에 사용자 영구 삭제 스크립트 실행"
         EOF
