--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,6 +43,7 @@ spring.servlet.multipart.max-request-size=5MB
 # OAuth Settings
 ## Google Settings
 google.client.id=${GOOGLE_CLIENT_ID}
+google.client.secret=${GOOGLE_CLIENT_SECRET}
 google.redirect.uri=${GOOGLE_REDIRECT_URI}
 
 ## Apple Settings
