feat: RedisConfig, 초대코드 레포지토리 추가
GitHub Issue: #51

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.datasource.password=${DATABASE_PASSWORD}
 # Redis Settings
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.password=${REDIS_PASSWORD}
 
 # Swagger Settings
 springdoc.swagger-ui.persist-authorization=true
