feat: FCM 설정 및 환경 구축

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,9 @@ spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
 spring.data.redis.password=${REDIS_PASSWORD}
 
+# Firebase Settings
+firebase.account-key.path=${FIREBASE_ACCOUNT_KEY_PATH}
+
 # Swagger Settings
 springdoc.swagger-ui.persist-authorization=true
 
