--- a/.github/workflows/manual-db-init.yml
+++ b/.github/workflows/manual-db-init.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Execute SQL on server
         run: |
           sshpass -p "${{ secrets.RPI_PASSWORD }}" ssh -o StrictHostKeyChecking=no -p ${{ secrets.RPI_PORT }} ${{ secrets.RPI_USER }}@${{ secrets.RPI_HOST }} << 'EOF'
-            set -ex
+            set -e
             
             echo "Connecting to server..."
 
