chore: resources에 keys 빈 폴더 추가

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,6 @@ out/
 
 ### Custom ###
 src/main/**/config/TokenGeneratorConfig.java
-/src/main/resources/keys/
+src/main/resources/keys/*.json
 **.p12
 **.log
