--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ logging.level.org.springframework.web=DEBUG
 
 # Mybatis Settings
 mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.mapper-locations=classpath:mappers/**/*.xml
+mybatis.mapper-locations=classpath*:/mappers/**/*.xml
 
 # Database Settings
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
