fix: 근무지 생성 개수 제한 로직 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -66,6 +66,10 @@ apple.redirect.uri=${APPLE_REDIRECT_URI}
 ## 3 days
 user.delete.grace-period=3
 
+# Workplace Settings
+## Workplace creation limit
+workplace.creation.limit=20
+
 # Salary Settings
 ## 1. Rate Settings
 salary.rates.national-pension=0.045
