feat: Docker 이미지 빌드 설정

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ src/main/**/config/TokenGeneratorConfig.java
 src/main/resources/keys/*.json
 **.p12
 **.log
+docker-compose.override.yml
+
+# Local Docker files
+mysql-data/
+redis-data/
