--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=MOUP_Server
 
-# Spring profile Settings
-spring.profiles.active=dev
+# Server Settings
+server.port=8080
+server.ssl.enabled=false
+server.forward-headers-strategy=NATIVE
 
 # .env file imports
 spring.config.import=optional:file:.env[.properties]
