--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -43,11 +43,26 @@ COPY --from=builder /app/build/libs/*.jar app.jar
 
 # .env 파일에서 주입될 환경 변수 (예시)
 # docker-compose.yml에서 env_file로 실제 값이 주입됩니다.
-ENV JWT_SECRET=
-ENV DATABASE_URL=
-ENV DATABASE_USERNAME=
-ENV DATABASE_PASSWORD=
-ENV REDIS_PASSWORD=
-
+ENV DATABASE_URL=${DATABASE_URL}
+ENV DATABASE_USERNAME=${DATABASE_USERNAME}
+ENV DATABASE_PASSWORD=${DATABASE_PASSWORD}
+ENV DATABASE_NAME=${DATABASE_NAME}
+ENV JWT_SECRET_KEY=${JWT_SECRET_KEY}
+ENV KEYSTORE_PASSWORD=${KEYSTORE_PASSWORD}
+ENV S3_BUCKET_NAME=${S3_BUCKET_NAME}
+ENV AWS_ACCESS_KEY=${AWS_ACCESS_KEY}
+ENV AWS_SECRET_KEY=${AWS_SECRET_KEY}
+ENV GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+ENV GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+ENV GOOGLE_REDIRECT_URI=${GOOGLE_REDIRECT_URI}
+ENV APPLE_CLIENT_ID=${APPLE_CLIENT_ID}
+ENV APPLE_TEAM_ID=${APPLE_TEAM_ID}
+ENV APPLE_KEY_ID=${APPLE_KEY_ID}
+ENV APPLE_PRIVATE_KEY=${APPLE_PRIVATE_KEY}
+ENV APPLE_REDIRECT_URI=${APPLE_REDIRECT_URI}
+ENV REDIS_HOST=${REDIS_HOST}
+ENV REDIS_PORT=${REDIS_PORT}
+ENV REDIS_PASSWORD=${REDIS_PASSWORD}
+ENV FIREBASE_ACCOUNT_KEY_PATH=${FIREBASE_ACCOUNT_KEY_PATH}
 # 컨테이너가 시작될 때 실행할 명령어
 ENTRYPOINT ["java", "-jar", "app.jar"]
