--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     volumes:
       # 운영용 nginx 설정 및 SSL 인증서 마운트
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro # 실제 SSL 인증서 경로
+      - ~/certbot/nginx-certs:/etc/nginx/ssl:ro
+      - ~/certbot/www:/var/www/certbot:ro
       # (Let's Encrypt 사용 시 관련 경로 추가)
     depends_on:
       - server
@@ -57,6 +58,8 @@ services:
       - ~/moup-data/mysql:/var/lib/mysql
       - ./db/init:/docker-entrypoint-initdb.d # 초기화 스크립트 (선택 사항)
     # ports는 운영 환경에서 노출하지 않음 (로컬 테스트 필요시 임시 추가)
+    ports:
+      - "127.0.0.1:3306:3306"
     restart: unless-stopped # 운영 환경 재시작 정책
 
   # 4. Redis Cache
